@@ -4,6 +4,9 @@ dev:
   * add 2 Greens functions for 3d diffusion approximation, one for exact diffusion and one usable for determining coda Q within Qopen
   * add debug option (--pdb)
   * allow more fine grained control of plot file names with str.format method
+  * use viridis_r cmap instead of hot_r cmap by default
+  * type of cmap can now be set with the config
+  * indicate number of observations with color in source displacement spectrum plots
   * fix bug when using newly introduced figsize and dpi options
 v2.6:
   * add dpi and figsize options for all plots (alternatively use a matplotlibrc file)
